added some translations

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -43,5 +43,6 @@
     "Introduzca su nombre": "Insert your name",
     "Introduzca su correo": "Insert your email",
     "Confirme su contraseña": "Confirm your password",
-    "¿Ya tiene una cuenta?": "Already have an account?"
+    "¿Ya tiene una cuenta?": "Already have an account?",
+    "Titulo": "Title"
 }
